--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://palak1176.github.io/data-scrollytelling",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,5 +15,6 @@
     "gh-pages": "^6.3.0",
     "svelte": "^5.28.1",
     "vite": "^6.3.5"
-  }
+  },
+"homepage": "https://palak1176.github.io/data-scrollytelling"
 }
